# cronet_flutter

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.github/workflows/: main.yml
android/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/cronet_flutter/: CronetFlutterPlugin.kt
common/: native_add.c  native_add.cpp  native_add.h  native_interop.cpp  native_interop.hpp  sample_executor.cc  sample_executor.h  sample_upload_data_provider.cc  sample_upload_data_provider.hh  sample_url_request_callback.cc  sample_url_request_callback.hh
common/cronet/: cronet.idl_c.h
common/dart_api/: dart_api.h  dart_api_dl.c  dart_api_dl.h  dart_native_api.h  dart_version.h
common/dart_api/internal/: dart_api_dl_impl.h
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/cronet_flutter_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/: Podfile
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: cronet_flutter.podspec
ios/Classes/: CronetFlutterPlugin.h  CronetFlutterPlugin.m  SwiftCronetFlutterPlugin.swift  native_add.c  native_add.cpp  native_interop.cpp  sample_executor.hh  sample_upload_data_provider.cc
ios/Classes/dart_api/: dart_api.h  dart_api_dl.c  dart_api_dl.h  dart_native_api.h
lib/: cronet_flutter.dart
lib/src/: cronet.dart  sample_executor.dart  sample_upload_data_provider.dart  sample_url_request_callback.dart
linux/: CMakeLists.txt  cronet_flutter_plugin.cc
linux/include/cronet_flutter/: cronet_flutter_plugin.h
macos/: cronet_flutter.podspec
macos/Classes/: CronetFlutterPlugin.swift  native_add.h  native_interop.hpp  sample_executor.cc  sample_upload_data_provider.hh  sample_url_request_callback.cc  sample_url_request_callback.hh
macos/Classes/cronet/: bidirectional_stream_c.h  cronet.idl_c.h  cronet_c.h  cronet_export.h
macos/Classes/dart_api/: dart_version.h
macos/Classes/dart_api/internal/: dart_api_dl_impl.h
test/: cronet_flutter_test.dart
windows/: CMakeLists.txt  cronet.86.0.4240.198.dll.lib  cronet_flutter_plugin.cpp
windows/include/cronet_flutter/: cronet_flutter_plugin.h
